# lammps_waterbox

./: CMakeLists.txt  README.md  main.cpp
examples/body/spc216_body/: in.body  log.lammps  spc216.data
examples/body/spc2_body_20170315/: a.py  hist.sh  in.body  lammps_debug2pdb.py  local.lammpstrj  log.lammps  tip3p_potential.data  transformed.local.lammpstrj  wat.lammpstrj
examples/body/spc2_body_20170315/manually_simulate/: 0.inp  (+2 more)
examples/body/spc2_body_min_20170315/: 2_waters.data  2_waters.gro  coord2TorqueMatrix.py  in.body  in.min  local.lammpstrj  log.lammps  min.dump.lammpstrj  min.lammpstrj  spc2.data  transformed.local.lammpstrj  transformed.min.dump.lammpstrj  wat.lammpstrj  water1.gro  water2.gro
examples/body/water/: a  in.body  movie.mpg  water.data
src/: .gitignore  CMakeLists.txt  Makefile.serial  pair_body.cpp  pair_body.h  penmp  src.exvim
src/.exvim.src/: ID  files  files.exproject  idutils-files  inherits  symbols  update-filelist.sh  update-idutils.sh  update-inherits.sh  update-symbols.sh  update-tags.sh
src/.exvim.src/view/: ~=+work=+code=+waterbox=+lammps-master=+src=+.exvim.src=+files.exproject=  ~=+work=+code=+waterbox=+lammps-master=+src=+lammps.cpp=  ~=+work=+code=+waterbox=+lammps-master=+src=+output.cpp=  ~=+work=+code=+waterbox=+lammps-master=+src=+pair_body.cpp=  ~=+work=+code=+waterbox=+lammps-master=+src=+pair_body.h=  ~=+work=+code=+waterbox=+lammps-master=+src=+thermo.cpp=
src/Obj_mpi/: .depend  Makefile
src/Obj_serial/: .depend
src/waterbox/: common.h  grid_structures.h  qm_interpolation.h  read_energy_force_new.h
